<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <!-- Guideline for label alignment -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="55dp" />

    <TextView
        android:id="@+id/textViewApiUrlLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/label_llm_api_url"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guidelineLabel" />

    <Spinner
        android:id="@+id/spinnerApiUrl"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        app:layout_constraintTop_toTopOf="@+id/textViewApiUrlLabel"
        app:layout_constraintBottom_toBottomOf="@+id/textViewApiUrlLabel"
        app:layout_constraintStart_toEndOf="@+id/guidelineLabel"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textViewApiKeyLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/label_llm_api_key"
        app:layout_constraintTop_toBottomOf="@+id/spinnerApiUrl" 
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guidelineLabel" />

    <EditText
        android:id="@+id/editTextApiKey"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="8dp"
        android:inputType="textPassword"
        app:layout_constraintTop_toTopOf="@+id/textViewApiKeyLabel"
        app:layout_constraintBottom_toBottomOf="@+id/textViewApiKeyLabel"
        app:layout_constraintStart_toEndOf="@+id/guidelineLabel"
        app:layout_constraintEnd_toStartOf="@+id/textViewThinkingModeLabel" />
    
    <Spinner
        android:id="@+id/spinnerBackendPreference"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="@+id/textViewApiKeyLabel"
        app:layout_constraintBottom_toBottomOf="@+id/textViewApiKeyLabel"
        app:layout_constraintStart_toEndOf="@+id/guidelineLabel"
        app:layout_constraintEnd_toStartOf="@+id/textViewSearchDepthLabel" />
        
    <TextView
        android:id="@+id/textViewThinkingModeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_thinking_mode"
        app:layout_constraintTop_toTopOf="@+id/textViewApiKeyLabel"
        app:layout_constraintBottom_toBottomOf="@+id/textViewApiKeyLabel"
        app:layout_constraintEnd_toStartOf="@+id/checkBoxThinkingModeKey" />

    <CheckBox
        android:id="@+id/checkBoxThinkingModeKey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toTopOf="@+id/textViewApiKeyLabel"
        app:layout_constraintBottom_toBottomOf="@+id/textViewApiKeyLabel"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textViewApiModelLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/label_llm_model"
        app:layout_constraintTop_toBottomOf="@+id/textViewApiKeyLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guidelineLabel" />

    <Spinner
        android:id="@+id/spinnerApiModel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        app:layout_constraintTop_toTopOf="@+id/textViewApiModelLabel"
        app:layout_constraintBottom_toBottomOf="@+id/textViewApiModelLabel"
        app:layout_constraintStart_toEndOf="@+id/guidelineLabel"
        app:layout_constraintEnd_toStartOf="@+id/textViewSearchDepthLabel" />

    <TextView
        android:id="@+id/textViewKnowledgeBaseLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/label_knowledge_base"
        app:layout_constraintTop_toBottomOf="@+id/spinnerApiModel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guidelineLabel" />

    <TextView
        android:id="@+id/textViewSearchDepthLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_search_depth"
        android:layout_marginStart="0dp"
        app:layout_constraintTop_toTopOf="@+id/spinnerApiModel"
        app:layout_constraintBottom_toBottomOf="@+id/spinnerApiModel"
        app:layout_constraintStart_toEndOf="@+id/spinnerApiModel" />

    <Spinner
        android:id="@+id/spinnerSearchDepth"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:paddingEnd="10dp"  
        app:layout_constraintTop_toTopOf="@+id/textViewSearchDepthLabel"
        app:layout_constraintBottom_toBottomOf="@+id/textViewSearchDepthLabel"
        app:layout_constraintStart_toEndOf="@+id/textViewSearchDepthLabel"
        app:layout_constraintEnd_toEndOf="parent" />

    <Spinner
        android:id="@+id/spinnerKnowledgeBase"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        app:layout_constraintTop_toTopOf="@+id/textViewKnowledgeBaseLabel"
        app:layout_constraintBottom_toBottomOf="@+id/textViewKnowledgeBaseLabel"
        app:layout_constraintStart_toEndOf="@+id/guidelineLabel"
        app:layout_constraintEnd_toStartOf="@+id/textViewRerankCountLabel" />

    <TextView
        android:id="@+id/textViewRerankCountLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_rerank_count"
        android:layout_marginStart="0dp"
        app:layout_constraintTop_toTopOf="@+id/spinnerKnowledgeBase"
        app:layout_constraintBottom_toBottomOf="@+id/spinnerKnowledgeBase"
        app:layout_constraintStart_toEndOf="@+id/spinnerKnowledgeBase" />

    <Spinner
        android:id="@+id/spinnerRerankCount"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:paddingEnd="10dp"
        app:layout_constraintTop_toTopOf="@+id/textViewRerankCountLabel"
        app:layout_constraintBottom_toBottomOf="@+id/textViewRerankCountLabel"
        app:layout_constraintStart_toEndOf="@+id/textViewRerankCountLabel"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textViewSystemPromptLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/label_system_prompt"
        app:layout_constraintTop_toBottomOf="@+id/spinnerKnowledgeBase"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guidelineLabel" />

    <EditText
        android:id="@+id/editTextSystemPrompt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:singleLine="true"
        android:layout_marginStart="0dp"
        app:layout_constraintTop_toTopOf="@+id/textViewSystemPromptLabel"
        app:layout_constraintBottom_toBottomOf="@+id/textViewSystemPromptLabel"
        app:layout_constraintStart_toEndOf="@+id/guidelineLabel"
        app:layout_constraintEnd_toStartOf="@+id/textViewGraphRagLabel" />

    <TextView
        android:id="@+id/textViewGraphRagLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_graph_rag_short"
        app:layout_constraintTop_toTopOf="@+id/textViewSystemPromptLabel"
        app:layout_constraintBottom_toBottomOf="@+id/textViewSystemPromptLabel"
        app:layout_constraintEnd_toStartOf="@+id/checkBoxGraphRagMode" />

    <CheckBox
        android:id="@+id/checkBoxGraphRagMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toTopOf="@+id/textViewSystemPromptLabel"
        app:layout_constraintBottom_toBottomOf="@+id/textViewSystemPromptLabel"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Chat messages RecyclerView -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewChat"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="4dp"
        android:background="@android:color/darker_gray"
        android:clipToPadding="false"
        android:paddingStart="2dp"
        android:paddingEnd="2dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextSystemPrompt"
        app:layout_constraintBottom_toTopOf="@+id/textViewUserPromptLabel" 
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textViewUserPromptLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp" 
        android:text="@string/label_user_prompt"
        app:layout_constraintBottom_toTopOf="@+id/recyclerViewImageThumbnails"
        app:layout_constraintStart_toStartOf="parent" />
    
    <TextView
        android:id="@+id/textViewAgentModeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_agent_mode"
        android:textSize="12sp"
        app:layout_constraintTop_toTopOf="@+id/textViewUserPromptLabel"
        app:layout_constraintBottom_toBottomOf="@+id/textViewUserPromptLabel"
        app:layout_constraintEnd_toStartOf="@+id/checkBoxAgentMode" />
    
    <CheckBox
        android:id="@+id/checkBoxAgentMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:scaleX="0.9"
        android:scaleY="0.9"
        app:layout_constraintTop_toTopOf="@+id/textViewUserPromptLabel"
        app:layout_constraintBottom_toBottomOf="@+id/textViewUserPromptLabel"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Image thumbnails container -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewImageThumbnails"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/editTextUserPrompt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/editTextUserPrompt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:maxLines="4"
        android:imeOptions="actionSend"
        android:layout_marginBottom="2dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonSendStop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" /> 

    <Button
        android:id="@+id/buttonSendStop"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/button_send"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonNewChat" />

    <Button
        android:id="@+id/buttonNewChat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_new_conversation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>